--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "NeuroAI Workshop"
 description: "Website for the NeuroAI Workshop"
 url: "https://NeuroAI-Workshop.github.io"
-baseurl: '/jekyll-uno'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 # disable_landing_page: true
