Initial setup for NeuroAI Workshop website

--- a/_config.yml
+++ b/_config.yml
@@ -45,5 +45,5 @@
 
 title: "NeuroAI Workshop"
 description: "Website for the NeuroAI Workshop"
-url: "https://NeuroAI-Workshop.github.io"
+url: "NeuroAI-Workshop.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
