--- a/_config.yml
+++ b/_config.yml
@@ -46,4 +46,4 @@
 title: "NeuroAI Workshop"
 description: "Website for the NeuroAI Workshop"
 url: "NeuroAI-Workshop.github.io"
-baseurl: "2024" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
