--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,10 @@
 # plugins: ['jekyll-paginate']
 # exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
 
-title: |
-  <span style="color: blue;">NeurIPS 2024 </span> 
-  NeuroAI: Fusing Neuroscience and AI for Intelligent Solutions Workshop
+# Add this at the end of the file
+title_text: "<span style='color: blue;'>NeurIPS 2024</span>"
+
+title: "NeuroAI: Fusing Neuroscience and AI for Intelligent Solutions Workshop"
 description: "Examining the fusion of neuroscience and AI: unlocking brain-inspired algorithms, advancing biological and artificial intelligence"
 url: "NeuroAI-Workshop.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
