--- a/_config.yml
+++ b/_config.yml
@@ -45,5 +45,5 @@
 
 title: "NeuroAI: Fusing Neuroscience and AI for Intelligent Solutions Workshop"
 description: "Examining the fusion of neuroscience and AI: unlocking brain-inspired algorithms, advancing biological and artificial intelligence"
-url: "NeuroAI-Workshop2024.github.io"
+url: "NeuroAI-Workshop.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
