--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@
 # plugins: ['jekyll-paginate']
 # exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
 
-title: "2nd NeuroAI: Fusing Neuroscience and AI for Intelligent Solutions Workshop"
+title: "2nd NeuroAI Workshop: Fusing Neuroscience and AI for Intelligent Solutions Workshop"
 date_text: "<span style='color: white;'>December, 2025</span>"
 where: "<span style='color: white;'>San Diego Convention Center</span>"
 description: "Examining the fusion of neuroscience and AI: unlocking brain-inspired algorithms, advancing biological and artificial intelligence"
