--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,9 @@
 # plugins: ['jekyll-paginate']
 # exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
 
-title: "2nd NeuroAI Workshop: Fusing Neuroscience and AI for Intelligent Solutions Workshop"
+title: "2nd NeuroAI Workshop @ NeurIPS: Fusing Neuroscience and AI for Intelligent Solutions"
 date_text: "<span style='color: white;'>December, 2025</span>"
-where: "<span style='color: white;'>San Diego Convention Center</span>"
+where: "<span style='color: white;'>NeurIPS2025, San Diego Convention Center</span>"
 description: "Examining the fusion of neuroscience and AI: unlocking brain-inspired algorithms, advancing biological and artificial intelligence"
 url: "https://neuroai-workshop.github.io/"
 baseurl: "" # the subpath of your site, e.g. /blog
