--- a/_config.yml
+++ b/_config.yml
@@ -1,52 +1,9 @@
-# # Site settings
-# title: "NeuroAI Workshop"
-# description: "Website for the NeuroAI Workshop"
-# url: "https://NeuroAI-Workshop.github.io"
-# baseurl: '/jekyll-uno'
-# # google_analytics: 'UA-XXXXXX-X'
-# # disqus_shortname: 'your-disqus-name'
-# # disable_landing_page: true
-
-# author:
-#   name: 'Josh Gerdes'
-#   email: josh@joshgerdes.com
-#   twitter_username: joshgerdes
-#   facebook_username: joshgerdes
-#   github_username:  joshgerdes
-#   linkedin_username:  joshgerdes
-
-# defaults:
-#   -
-#     scope:
-#       path: ''
-#       type: 'posts'
-#     values:
-#         layout: 'post'
-
-# # Build settings
-# destination: _site
-# paginate: 10
-# permalink: /:year/:title/
-# markdown: kramdown
-# highlighter: rouge
-
-# sass:
-#     sass_dir: _sass
-#     style: compressed
-
-# kramdown:
-#   # use Github Flavored Markdown
-#   input: GFM
-#   # do not replace newlines by <br>s
-#   hard_wrap: false
-
-# plugins: ['jekyll-paginate']
-# exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
-
 # title: "2nd NeuroAI Workshop @ NeurIPS:<br>Fusing Neuroscience and AI for Intelligent Solutions"
 title: "1st Reliability Quantification for LLMs Workshop @AAAI: Quantifying Reliability in Language Models"
 date_text: "<span style='color: white;'>January, 2026</span>"
+date: "January, 2026"
 where: "<span style='color: white;'>AAAI 2026, Singapore EXPO</span>"
+location: "AAAI 2026, Singapore EXPO"
 description: "Under Review"  
 url: "https://llmrel.github.io/"
 baseurl: "" # the subpath of your site, e.g. /blog
