--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,6 @@ kramdown:
 
 plugins: ['jekyll-paginate']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
+
+# GitHub Pages settings
+github: [metadata]
